<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner_courses"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_medium_margin"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_note_title"
        android:layout_marginTop="@dimen/dimen_small_margin"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint" />

    <EditText
        android:id="@+id/edit_note_text"
        android:inputType="text"
        android:layout_marginTop="@dimen/dimen_small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_text_hint" />

    <com.example.notekeeper.ModuleStatusView
        android:id="@+id/module_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:outlineColor="#ff0000"
        app:shape="circle" />
</LinearLayout>